--- a/index.html
+++ b/index.html
@@ -6,11 +6,94 @@
 
     <title>Random User Api</title>
     
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="wrapper min-vh-100 d-flex justify-content-center align-items-center">
+        <div class="phone border border-5 border-black rounded-5 shadow-lg overflow-y-scroll" style="height: 600px; width:400px;">
+
+    <!-- top time and network section  -->
+
+    <div class="text-white d-flex justify-content-between align-items-center " style="height: 50px; padding: 10px;">
+        <span>12:12</span>
+        <div class="bg-black w-25 rounded-pill h-1 " style="height: 1.4rem;"></div>
+        <div>
+            <i class="bi bi-wifi"></i>
+            <i class="bi bi-bar-chart"></i>
+            <i class="bi bi-battery-half"></i>
+        </div>
+    </div>
+    <main class=" homescreen p-2 h-100 position-relative" >
+        <div class="slider-container bg-white p-3 rounded-4 shadow-lg position-relative" style="top: 400px;">
+            <input type="range"
+            min="0"
+            max="100"
+            value="0"
+            class="slider"
+            id="mySlider"
+            >
+            <label class="position-absolute text-center w-100" id="label" for="">Slide to Unluck</label>
+        </div>
+    </main>
+
+<!-- homescreen  -->
+
+<!-- app screen  -->
+ <main class="appScreen p-2 bg-dark pt-5"    style="height: 540px; display: none;">a
+    <div class="d-flex justify-content-center">
+        <div class="text-white d-flex flex-column align-items-center  p-2 rounded">
+            <i class="bi bi-person-rolodex text-danger bg-white px-2 rounded fs-1"
+            onclick="displayContactScreen()"></i>
+            <span class="text-white">contact</span>
+        </div>
+    </div>
+ </main>
+
+
+ <!-- contact list screen  -->
+
+ <main class="contactListScreen " style="height: 90% ;display:none">  
+    <div class="contactListContainer">
+        <!-- title  -->
+         <h2 class="p-2 fw-bolder">Contacts</h2>
+         <!-- search  -->
+          <div class="header mt-2 mb-2 position-relative">
+            <i class="bi bi-search position-absolute fs-4 mx-1 text-secondary"></i>
+            <input type="text"
+             id="search"
+             class="form-control rounded-pill"
+             placeholder="Search contact"
+             ></search>
+          </div>
+          <!-- spinner -->
+
+          <div class="bg-light w-25 rounded m-auto p-3 showSpinner">
+            <div class="spinner-border text-primary" role="status">
+  <span class="visually-hidden">Loading...</span>
+</div>
+          </div>
+          <!-- contact list  -->
+
+          <div id="list" class="bg-light pt-2 " style="display: none;">
+            <div class="p-2">
+                <span id="userCount">10</span>
+                Contact
+            </div>
+            <div class="accordion mt-2" id="userAccordion">
+ 
+ 
+ 
+</div>
+          </div>
+    </div>    
+</main>
+
+</div>
+        </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <script src="./script.js"></script>
